# cpp-micro-service

./: CMakeLists.txt  README.md  input.json
include/: BillingSystem.h  Customer.h  Item.h  MongoDBIntegration.h
src/: BillingSystem.cpp  Customer.cpp  Item.cpp  MongoDBIntegration.cpp  main.cpp
